README Update: typo fix

--- a/README.html
+++ b/README.html
@@ -62,7 +62,7 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 <ul>
 <li>Reads the train and test datasets into R.<br /></li>
 <li>Selects the measurements on the mean and standard deviation for each variable.<br /></li>
-<li>Adds subject and activity indices to the raw data, as well as column names.<br /></li>
+<li>Adds subject and activity indices to the data, as well as column names.<br /></li>
 <li>Combines the two edited datasets into a single dataset in the narrow format.<br /></li>
 <li>Substitues numerical labels for activity with word descriptions.<br /></li>
 <li>Renames columns to a more descriptive format with complete words, to allow for easier subsetting.<br /></li>
